[metadata]
name = kaitaiStructCompile.postprocessors
author = KOLANICH
url = https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.postprocessors
description = the package containing postprocessors which may be useful
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = KaitaiStruct, compiler, binary format, python, postprocessing
license = Unlicense
license_file = UNLICENSE
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent

[options]
python_requires = >=3.4
zip_safe = False
include_package_data = True
py_modules = kaitaiStructCompile.postprocessors
setup_requires = setuptools; setuptools_scm;
